# xmbl_p2p

./: .gitignore  Cargo.toml  FINAL_SUMMARY.md  README.md  SYSTEM_STATUS.md  SYSTEM_STATUS_FINAL.md  TEAM_STATUS_REPORT.md  TESTING_GUIDE.md  debug-test.html  demo-complete-system.sh  demo-fixed-cli.sh  demo-fixed-dashboard.sh  demo-p2p-system.sh  demo-p2p-test.txt  demo-p2p-workflow.sh  demo-real-p2p.sh  demo-system.sh  demo_compute.wasm  demo_storage.txt  instructions.md  nextversion.md  package-lock.json  progress.md  simple-test.js  start-p2p-network.sh  start-system.sh  tarpaulin-report.html  test-compute-demo.wasm  test-compute.wasm  test-dashboard-reality.html  test-dashboard.html  test-functional-client.js  test-persistence.html  test-real-p2p.js  test-real-upload.txt  test-screenshot.js  test-upload.txt
blockchain/: Cargo.toml  instructions.md  progress.md
blockchain/src/: lib.rs
cli/: Cargo.toml  instructions.md  progress.md
cli/src/: lib.rs  main.rs
compute/: Cargo.toml  instructions.md  progress.md
compute/src/: lib.rs
contracts/: Cargo.toml  instructions.md  progress.md
contracts/src/: lib.rs
ios-app/: instructions.md  progress.md
ios-app/Sources/XMBLApp/: BlockchainViewerView.swift  ComputeMonitorView.swift  StorageMonitorView.swift  ViewModels.swift
ios-app/Tests/XMBLAppTests/: XMBLAppTests.swift
ios-app/XMBLApp/: Models.swift  NodeManagementView.swift  Package.swift  README.md  XMBLApp.swift
ios-app/XMBLApp/XMBLApp/: AppDelegate.swift  DashboardView.swift  MockData.swift  Protocols.swift
monitoring/: Cargo.toml  instructions.md  progress.md
monitoring/src/: lib.rs  main.rs
network/: Cargo.toml  instructions.md  progress.md
network/src/: lib.rs
node_identity/: Cargo.toml  instructions.md  progress.md
node_identity/src/: lib.rs
node_profiler/: Cargo.toml  instructions.md  progress.md
node_profiler/src/: lib.rs
p2p-node/: Cargo.toml
p2p-node/src/: main.rs
p2p-proxy/: Cargo.toml
p2p-proxy/src/: main.rs
simulator/: Cargo.toml  instructions.md  progress.md
simulator/src/: lib.rs  main.rs
storage/: Cargo.toml  instructions.md  progress.md
storage/src/: lib.rs
web-api/: Cargo.toml
web-api/src/: main.rs
web-dashboard/: client.html  enhanced-dashboard.html  functional-client.html  index.html  instructions.md  p2p-client.html  package-lock.json  package.json  progress.md  real-functional-client.html
web-dashboard/public/: index.html
web-dashboard/src/: App.css  App.tsx  index.css
web-dashboard/src/__tests__/: App.test.tsx  BlockchainViewer.test.tsx  ComputeMonitor.test.tsx  Dashboard.test.tsx  NodeManagement.test.tsx  StorageMonitor.test.tsx
web-dashboard/src/components/: BlockchainViewer.tsx  ComputeMonitor.tsx  Dashboard.tsx  NodeManagement.tsx  StorageMonitor.tsx
