[package]
name = "xmbl_node_profiler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
sys-info = "0.9"
hostname = "0.3"
num_cpus = "1.0"
