[package]
name = "xmbl_p2p_node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"

# Our actual crates
xmbl_storage = { path = "../storage" }
xmbl_network = { path = "../network" }
xmbl_compute = { path = "../compute" }
